--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,9 +7,20 @@ body{
     background-color: blueviolet
 }
 
+img.lado{
+    float: right;
+}
+
+h1{
+    color:rgb(58, 0, 112)
+}
+
+h2{
+    color:rgb(58, 0, 112)
+}
 main{
     background-color: white;
-    width: 500px;
+    width: 580px;
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px black;
